--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
   <script>
     // TODO: 替换为实际的 APK 下载链接
-    const APK_DOWNLOAD_URL = 'https://github.com/boyzcl/luckloom-releases/releases/latest/download/luckloom.apk';
+    const APK_DOWNLOAD_URL = 'https://github.com/boyzcl/luckloom-releases/releases/download/v1.0.1/luckloom-1.0.1.apk';
 
     document.getElementById('android-btn').href = APK_DOWNLOAD_URL;
 
