--- a/index.html
+++ b/index.html
@@ -222,13 +222,10 @@
     }
 
     /* Language Switcher */
-    .lang-switcher {
-      position: absolute;
+    .lang-btn {
+      position: fixed;
       top: 20px;
       right: 20px;
-    }
-
-    .lang-btn {
       background: rgba(255, 255, 255, 0.2);
       border: none;
       color: white;
@@ -237,6 +234,7 @@
       font-size: 14px;
       cursor: pointer;
       transition: background 0.2s;
+      z-index: 100;
     }
 
     .lang-btn:hover {
@@ -338,7 +336,6 @@
   </div>
 
   <script>
-    // TODO: 替换为实际的 APK 下载链接
     const APK_DOWNLOAD_URL = 'https://github.com/boyzcl/luckloom-releases/releases/download/v1.0.1/luckloom-1.0.1.apk';
 
     document.getElementById('android-btn').href = APK_DOWNLOAD_URL;
